Bug 942799 - Respect height=device-height in meta viewport tag on B2G. r=mbrubeck,ehsan